--- a/sarah_modeling.ipynb
+++ b/sarah_modeling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/share/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/usr/share/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3044: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     },
@@ -90,7 +90,7 @@
        "       'Zambia', 'Zimbabwe'], dtype=object)"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "       'West Virginia', 'Wisconsin', 'Wyoming', 'nan'], dtype=object)"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "        'Zapata County', 'Zavala County', 'nan'], dtype=object))"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,16 +162,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_columns = ['retail_and_recreation_percent_change_from_baseline',\n",
+    "                'grocery_and_pharmacy_percent_change_from_baseline',\n",
+    "                'parks_percent_change_from_baseline',\n",
+    "                'transit_stations_percent_change_from_baseline',\n",
+    "                'workplaces_percent_change_from_baseline',\n",
+    "                'residential_percent_change_from_baseline']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f99f1a44b90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7a80fb1bd0>"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -206,20 +220,6 @@
     "us_overall_7d.retail_and_recreation_percent_change_from_baseline.plot(label = '7-d Rolling Mean')\n",
     "# plt.legend(loc = 'best')\n",
     "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 268,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_columns = ['retail_and_recreation_percent_change_from_baseline',\n",
-    "                'grocery_and_pharmacy_percent_change_from_baseline',\n",
-    "                'parks_percent_change_from_baseline',\n",
-    "                'transit_stations_percent_change_from_baseline',\n",
-    "                'workplaces_percent_change_from_baseline',\n",
-    "                'residential_percent_change_from_baseline']"
    ]
   },
   {
